--- a/public/note-app.html
+++ b/public/note-app.html
@@ -85,6 +85,8 @@
             id$="[[note.$key]]"
             title="[[note.title]]"
             body="[[note.body]]"
+            latitude="[[note.latitude]]"
+            longitude="[[note.longitude]]"
             on-tap="edit">
         </na-note>
       </template>
