--- a/public/lib/note-app/common/note-app/na-editor.html
+++ b/public/lib/note-app/common/note-app/na-editor.html
@@ -82,7 +82,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
     <div id="background"></div>
-    <na-note id="note" title="{{note.title}}" body="{{note.body}}" latitude="[[latitude]]" longitude="[[longitude]]" editable></na-note>
+
+    <na-note
+      id="note"
+      title="{{note.title}}"
+      body="{{note.body}}"
+      latitude="[[latitude]]"
+      longitude="[[longitude]]"
+      editable>
+    </na-note>
+
     <div class="controls">
       <paper-button on-tap="delete">Delete</paper-button>
       <paper-button on-tap="save">Done</paper-button>
@@ -119,7 +128,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       create() {
         this._setOpened(true);
-        this.note = { title: '', body: '', latitude: this.latitude, longitude: this.longitude };
+        this.note = {
+          title: '',
+          body: '',
+          latitude: this.latitude,
+          longitude: this.longitude,
+        };
         this.transitionInFrom(this.getBoundingClientRect());
       },
 
